[package]
name = "arsnap-keygen"
version = "0.1.0"
edition = "2021"
authors = ["Eyal Chojnowski <eyal@pianity.com>"]
repository = "https://github.com/pianity/arsnap-keygen"
license = "MIT"
description = "Testing Arweave key generation deterministically"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
rsa = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = { version = "0.2.5", features = ["js"] }
